README 추가 및 grok 적용

--- a/logstash/logstash-test.conf
+++ b/logstash/logstash-test.conf
@@ -7,8 +7,12 @@ input {
 }
 
 filter {
-    dissect {
-        mapping => {"message" => "[%{timestamp}]%{?->}[%{id}] %{ip} %{+ip} [%{?level}] - %{}."}
+    grok {
+        pattern_definitions => { "MY_TIMESTAMP" =>
+        "%{YEAR}[/-]%{MONTHNUM}[/-]%{MONTHDAY}[T ]%{HOUR}:?%{MINUTE}(?::?%{SECOND})?%{ISO8601_TIMEZONE}?"
+        }
+        match => {"message" =>
+        "\[%{MY_TIMESTAMP:timestamp}\] [ ]*\[%{DATA:id}\] %{IP:ip} %{NUMBER:port:int} \[%{LOGLEVEL:level}\] \- %{DATA:msg}\."}
     }
 }
 
