--- a/logstash/logstash-test.conf
+++ b/logstash/logstash-test.conf
@@ -7,12 +7,11 @@ input {
 }
 
 filter {
-    grok {
-        pattern_definitions => { "MY_TIMESTAMP" =>
-        "%{YEAR}[/-]%{MONTHNUM}[/-]%{MONTHDAY}[T ]%{HOUR}:?%{MINUTE}(?::?%{SECOND})?%{ISO8601_TIMEZONE}?"
-        }
-        match => {"message" =>
-        "\[%{MY_TIMESTAMP:timestamp}\] [ ]*\[%{DATA:id}\] %{IP:ip} %{NUMBER:port:int} \[%{LOGLEVEL:level}\] \- %{DATA:msg}\."}
+    dissect {
+        mapping => {"message" => "[%{?timestamp}]%{?->}[%{?id}] %{?ip} %{?port} [%{level}] - %{?msg}."}
+    }
+    mutate {
+        uppercase => ["level"]
     }
 }
 
