--- a/logstash/logstash-test.conf
+++ b/logstash/logstash-test.conf
@@ -8,10 +8,15 @@ input {
 
 filter {
     dissect {
-        mapping => {"message" => "[%{?timestamp}]%{?->}[%{?id}] %{?ip} %{?port} [%{level}] - %{?msg}."}
+        mapping => {"message" => "[%{timestamp}]%{?->}[%{?id}] %{?ip} %{?port} [%{?level}] - %{?msg}."}
     }
     mutate {
-        uppercase => ["level"]
+        strip => "timestamp"
+    }
+    date {
+        match => [ "timestamp", "YYYY-MM-dd HH:mm", "yyyy/MM/dd HH:mm:ss" ]
+        target => "new_timestamp"
+        timezone => "UTC"
     }
 }
 
