--- a/logstash/logstash-test.conf
+++ b/logstash/logstash-test.conf
@@ -8,15 +8,15 @@ input {
 
 filter {
     dissect {
-        mapping => {"message" => "[%{timestamp}]%{?->}[%{?id}] %{?ip} %{?port} [%{?level}] - %{?msg}."}
+        mapping => {"message" => "[%{timestamp}]%{?->}[%{?id}] %{ip} %{port} [%{level}] - %{msg}."}
     }
-    mutate {
-        strip => "timestamp"
+    if [level] == "INFO" {
+        drop{ }
     }
-    date {
-        match => [ "timestamp", "YYYY-MM-dd HH:mm", "yyyy/MM/dd HH:mm:ss" ]
-        target => "new_timestamp"
-        timezone => "UTC"
+    else if [level] == "warn" {
+        mutate {
+            remove_field => ["ip", "port", "timestamp", "level"]
+        }
     }
 }
 
