--- a/logstash/logstash-test.conf
+++ b/logstash/logstash-test.conf
@@ -6,20 +6,11 @@ input {
     }
 }
 
-filter {
-    dissect {
-        mapping => {"message" => "[%{timestamp}]%{?->}[%{?id}] %{ip} %{port} [%{level}] - %{msg}."}
-    }
-    if [level] == "INFO" {
-        drop{ }
-    }
-    else if [level] == "warn" {
-        mutate {
-            remove_field => ["ip", "port", "timestamp", "level"]
-        }
-    }
-}
-
 output {
-    stdout { }
+    file {
+        path => "C:/logstash-7.17.3/config/output.json"
+    }
+    elasticsearch {
+        index => "output"
+    }
 }
