파이썬 클라이언트 공공데이터 분석 인구 분포 설정 파일 오류 수정

--- a/python_public_data/kibana.yml
+++ b/python_public_data/kibana.yml
@@ -109,10 +109,11 @@
 map.regionmap:
   layers:
     - name: "ADONG"
+      attribution: "INRAP"
       url: "http://localhost/seoul_adm.geojson"
       fields:
-          - name: "ADM_DR_NM"
-            description: "ADM NAME"
+        - name: "ADM_DR_NM"
+          description: "ADM NAME"
 
 #map.tilemap.url:
 #  "https://mt1.google.com/vt/lyrs=s&x={x}&y={y}&z={z}"
